possible fix for scrolling on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     position: relative;
     top: 25px;
     padding: 20px;
+    box-shadow: 0px 10px 50px 36px rgba(0,0,0,0.1);
 }
 
 .top-left-buttons {
@@ -219,6 +220,7 @@ h1, h2, h3, h4, h5, h6 {
     background: -webkit-linear-gradient(180deg, rgb(139, 139, 139) 50%, rgba(116,116,116,1) 100%);
     background: linear-gradient(180deg, rgb(139, 139, 139) 50%, rgba(116,116,116,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#9e9e9e",endColorstr="#747474",GradientType=1); 
+    
 
 }
 
@@ -233,4 +235,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .link-container {
     text-align: center;
+}
+
+.page-container {
+    overflow: scroll;
 }
